# rest-bert

./: .env  .gitignore  Cargo.toml  body.json  env_pytorch  req.http  resp.json  stress.sh  test.http  test.sh
src/: app.rs  main.rs  model.rs
