[package]
name = "rest-bert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.68"
async-object-pool = "0.1.4"
lazy_static = "1.4.0"
rust-bert = "0.21.0"
serde = "1.0.152"
serde_json = "1.0.91"
